fixed stats logo distortion on windows

--- a/css/style1.css
+++ b/css/style1.css
@@ -4091,7 +4091,7 @@ transform:scale(1.1);
 }
 .stats-widget .text-red{
   color: #dd4b39;
-  padding:2em 0 0 2em; 
+  padding:2em 0 0 3em; 
 }
 .stats-widget .text-yellow{
 color: #f39c12;
